--- a/templates/quotation/_form.html.twig
+++ b/templates/quotation/_form.html.twig
@@ -35,7 +35,7 @@
 {{ form_end(form) }}
 
 
-{% block javascripts %}
+{% block javascript %}
 	<script>
 		const addServiceFormDeleteLink = (item) => {
 const removeFormButton = document.createElement('button');
