--- a/templates/quotation/show.html.twig
+++ b/templates/quotation/show.html.twig
@@ -54,8 +54,42 @@
 			<td>{{quotation.baseVatRate20}}</td>
 			<td>{{quotation.baseVatRate0}}</td>
 		</tr>
+		<td>
+			{# <button id="generate-invoice-btn" class="btn btn-primary">Générer la facture associée au devis</button> #}
+			<a href="{{ path('front_quotation_generate_invoice', {'id': quotation.id}) }}" class="btn btn-primary">Générer la facture associée au devis</a>
+		</td>
 	</tbody>
-</table></br>{% if previousVersions %}
+</table>
+
+
+{% block javascript %}
+
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+const generateInvoiceBtn = document.getElementById('generate-invoice-btn');
+generateInvoiceBtn.addEventListener('click', function () {
+const quotationId = {{ quotation.id }};
+generateInvoice(quotationId);
+});
+
+function generateInvoice(quotationId) { // Envoie d'une requête AJAX pour générer la facture
+fetch (`/quotation/generate-invoice/${quotationId}`, {
+method: 'GET',
+headers: {
+'Content-Type': 'application/json'
+}
+}).then(response => {
+if (response.ok) {
+return response.json();
+}
+}).then(data => console.log(data)).catch(error => {
+console.error('Erreur lors de la génération de PDF:', error);
+});
+}
+});
+	</script>
+
+{% endblock %}</br>{% if previousVersions %}
 <h2>Version précédentes:</h2>
 <table class="table">
 	<thead>
