--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,19 +43,27 @@
                 </ul>
 
                 <ul class="flex flex-col p-3">
-                    <a href="#">
-                        <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
-                            <div class="flex items-center gap-2">
-                                <icon name="document-text"></icon>
-                                <span>Factures</span>
-                            </div>
-                        </li>
-                    </a>
                     <a href="/admin/customer/">
                         <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
                             <div class="flex items-center gap-2">
                                 <icon name="users"></icon>
                                 <span>Clients</span>
+                            </div>
+                        </li>
+                    </a>
+                    <a href="/admin/quotation/">
+                        <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
+                            <div class="flex items-center gap-2">
+                                <icon name="document-text"></icon>
+                                <span>Devis</span>
+                            </div>
+                        </li>
+                    </a>
+                    <a href="/admin/invoice/">
+                        <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
+                            <div class="flex items-center gap-2">
+                                <icon name="document-text"></icon>
+                                <span>Factures</span>
                             </div>
                         </li>
                     </a>
