--- a/templates/_partials/_quotation.index.html.twig
+++ b/templates/_partials/_quotation.index.html.twig
@@ -1,54 +1,51 @@
-<table class="table">
-	<thead>
-		<tr>
-			<th>Id</th>
-			<th>Description</th>
-			<th>Amount_ht</th>
-			<th>Amount_ttc</th>
-			<th>Status</th>
-			<th>Date</th>
-			<th>Due_date</th>
-			<th>Created</th>
-			<th>Services</th>
-			<th>Vat_rate_10</th>
-			<th>Vat_rate_20</th>
-			<th>Owner</th>
-			<th>Company</th>
-			<th>Actions</th>
-		</tr>
-	</thead>
-	<tbody>
-		{% for quotation in quotations %}
-			<tr>
-				<td>{{ quotation.id }}</td>
-				<td>{{ quotation.description }}</td>
-				<td>{{ quotation.amountHt }}</td>
-				<td>{{ quotation.amountTtc }}</td>
-				<td>{{ quotation.status }}</td>
-				<td>{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
-				<td>{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
-				<td>{{ quotation.createdAt ? quotation.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-				<td>{{ quotation.services|length }}</td>
-				<td>{{quotation.vatRate10}}</td>
-				<td>{{quotation.vatRate20}}</td>
-				<td>{{ quotation.owner.email }}</td>
-				<td>{{ quotation.company.name }}</td>
-				<td>
-					{% if is_granted('ROLE_SUPERADMIN') %}
-						<a href="{{ path('superadmin_quotation_show', {'id': quotation.id}) }}">show</a>
-						<a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}">edit</a>
-					{% endif %}
-					{% if is_granted('ROLE_ADMIN') %}
-
-						<a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}">show</a>
-						<a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}">edit</a>
-					{% endif %}
-					{% if is_granted('ROLE_USER') %}
-						<a href="{{ path('user_quotation_show', {'id': quotation.id}) }}">show</a>
-						<a href="{{ path('user_quotation_edit', {'id': quotation.id}) }}">edit</a>
-					{% endif %}
-				</td>
-			</tr>
-		{% endfor %}
-	</tbody>
+<table class="min-w-full divide-y divide-gray-200">
+    <thead>
+        <tr>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Description</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Amount_ht</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Amount_ttc</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Status</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Date</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Due_date</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Created</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Services</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Vat_rate_10</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Vat_rate_20</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Owner</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Company</th>
+            <th class="px-3 py-2 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+        </tr>
+    </thead>
+    <tbody class="bg-white divide-y divide-gray-200">
+        {% for quotation in quotations %}
+        <tr>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.description }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.amountHt }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.amountTtc }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.status }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.createdAt ? quotation.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.services|length }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.vatRate10 }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.vatRate20 }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.owner.email }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">{{ quotation.company.name }}</td>
+            <td class="px-3 py-2 whitespace-no-wrap">
+                {% if is_granted('ROLE_SUPERADMIN') %}
+                <a href="{{ path('superadmin_quotation_show', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">show</a>
+                <a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">edit</a>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">show</a>
+                <a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">edit</a>
+                {% endif %}
+                {% if is_granted('ROLE_USER') %}
+                <a href="{{ path('user_quotation_show', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">show</a>
+                <a href="{{ path('user_quotation_edit', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">edit</a>
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
 </table>
