--- a/templates/superadmin/quotation/show.html.twig
+++ b/templates/superadmin/quotation/show.html.twig
@@ -187,5 +187,7 @@
 </br>
 <a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a>
 </br>
+<a href="{{ path('superadmin_generate_pdf', {'id': quotation.id, 'type': 'devis'}) }}" target="_blank">Générer PDF</a>
+</br>
 {{ include('superadmin/quotation/_delete_form.html.twig') }}
 {% endblock %}
