--- a/templates/user/invoice/show.html.twig
+++ b/templates/user/invoice/show.html.twig
@@ -77,5 +77,6 @@
 	</table>
 	<a href="{{ path('user_invoice_index') }}">back to list</a>
 	<a href="{{ path('user_invoice_edit', {'id': invoice.id}) }}">edit</a>
+	<a href="{{ path('user_generate_pdf', {'id': invoice.id, 'type': 'invoice'}) }}" target="_blank">Générer PDF</a>
 	{{ include('user/invoice/_delete_form.html.twig') }}
 {% endblock %}
