--- a/templates/_partials/_quotation.index.html.twig
+++ b/templates/_partials/_quotation.index.html.twig
@@ -35,12 +35,10 @@
                 {% if is_granted('ROLE_SUPERADMIN') %}
                 <a href="{{ path('superadmin_quotation_show', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">show</a>
                 <a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">edit</a>
-                {% endif %}
-                {% if is_granted('ROLE_ADMIN') %}
+                {% elseif is_granted('ROLE_ADMIN') %}
                 <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">show</a>
                 <a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">edit</a>
-                {% endif %}
-                {% if is_granted('ROLE_USER') %}
+                {% elseif is_granted('ROLE_USER') %}
                 <a href="{{ path('user_quotation_show', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">show</a>
                 <a href="{{ path('user_quotation_edit', {'id': quotation.id}) }}" class="text-indigo-600 hover:text-indigo-900">edit</a>
                 {% endif %}
