--- a/templates/user/profile/index.html.twig
+++ b/templates/user/profile/index.html.twig
@@ -1,20 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfileController!{% endblock %}
+{% block title %}Profil de {{ user.firstName }} {{ user.lastName }}{% endblock %}
 
 {% block page_content %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container mx-auto p-4">
+    <div class="bg-white shadow rounded-lg p-6">
+        <h2 class="text-xl font-semibold mb-4">Profil de l'utilisateur</h2>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="first_name">
+                Prénom
+            </label>
+            <div class="text-gray-700">{{ user.firstName }}</div>
+        </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/srv/app/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/srv/app/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
-    </ul>
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="last_name">
+                Nom
+            </label>
+            <div class="text-gray-700">{{ user.lastName }}</div>
+        </div>
+
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+                E-mail
+            </label>
+            <div class="text-gray-700">{{ user.email }}</div>
+        </div>
+
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="company">
+                Compagnie
+            </label>
+            <div class="text-gray-700">{{ user.company.name }}</div>
+        </div>
+
+    </div>
 </div>
 {% endblock %}
