--- a/templates/admin/customer/show.html.twig
+++ b/templates/admin/customer/show.html.twig
@@ -1,16 +1,22 @@
 {% extends 'base.html.twig' %}
-{% block title %}Client {{ customer.name }}{% endblock %}
+{% block title %}Client
+	{{ customer.name }}
+{% endblock %}
 {% block page_content %}
-    <div class="container mx-auto my-8">
-        <h1 class="text-4xl font-bold mb-6">Client {{ customer.name }}</h1>
-        <p class="mb-4">{{ customer.email }}</p>
-        <p class="mb-4">{{ customer.street }}, {{ customer.city }}, {{ customer.getZipCode() }}, {{ customer.country }}</p>
-        <h2>Devis</h2>
-        <br>
-        {% if quotations %}
-            {% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%}
-        {% endif %}
-        <br>
-        <a href="{{ path('admin_customer_update', {'id': customer.id}) }}" class="btn btn-primary">Modifier</a>
-    </div>
+	<div class="container mx-auto my-8">
+		<h1 class="text-4xl font-bold mb-6">Client
+			{{ customer.name }}</h1>
+		<p class="mb-4">{{ customer.email }}</p>
+		<p class="mb-4">{{ customer.street }},
+			{{ customer.city }},
+			{{ customer.getZipCode() }},
+			{{ customer.country }}</p>
+		<h2>Devis</h2>
+		<br>
+		{% if quotations %}
+			{% include '_partials/_bills.index.html.twig' with {'quotations': quotations, 'type':"quotation"}%}
+		{% endif %}
+		<br>
+		<a href="{{ path('admin_customer_update', {'id': customer.id}) }}" class="btn btn-primary">Modifier</a>
+	</div>
 {% endblock %}
