--- a/templates/superadmin/quotation/index.html.twig
+++ b/templates/superadmin/quotation/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quotation index
+{% block page_title %}Quotations
 {% endblock %}
 
 {% block page_content %}
-	<h1>Quotation index</h1>
-	{# a changer suivant le role de l'utilisateur #}
-	{% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%} 
+	<h1>Vos devis</h1>
+	{% include '_partials/_bills.index.html.twig' with {'items': quotations, 'type':"quotation"}%}
+
 	<a href="{{ path('superadmin_quotation_new') }}">Create new</a>
 {% endblock %}
