--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Réinitialisation de mot de passe{% endblock %}
 
 {% block page_content %}
-<section class="container my-3">
-    <div class="row">
-        <div class="col">
-            <h1>Réinitialisation de mot de passe</h1>
-            {{ form_start(passForm) }}
-                {{ form_row(passForm.password) }}
-                <button type="submit" class="btn btn-primary">Envoyer</button>
+<section class="max-w-4xl mx-auto my-3">
+    <div class="flex flex-wrap">
+        <div class="w-full">
+            <h1 class="text-2xl font-bold mb-4">Réinitialisation de mot de passe</h1>
+            {{ form_start(passForm, {'attr': {'class': 'space-y-4'}}) }}
+                {{ form_row(passForm.password, {'attr': {'class': 'block w-full p-2 border border-gray-300 rounded-md'}}) }}
+                <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">Envoyer</button>
             {{ form_end(passForm) }}
         </div>
     </div>
