--- a/templates/emails/password_reset.html.twig
+++ b/templates/emails/password_reset.html.twig
@@ -1,3 +1,17 @@
-<p>Bonjour {{ user.firstname }} {{ user.lastname }}</p>
-<p>Pour votre demande de réinitialisation de mot de passe, veuillez cliquer sur le lien suivant : <a href="{{ url|raw }}">{{ url|raw }}</a></p>
-<p>Merci</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Réinitialisation de Mot de Passe</title>
+</head>
+<body style="background-color: #edf2f7; font-family: Arial, sans-serif; padding: 20px; text-align: center;">
+    <div style="max-width: 600px; margin: auto; background-color: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+        <h1 style="color: #333333; font-size: 24px;">Inscription</h1>
+        <p style="color: #333333; font-size: 16px;">Bonjour {{ user.firstname }} {{ user.lastname }},</p>
+        <p style="color: #333333; font-size: 16px;">Pour votre demande de réinitialisation de mot de passe, veuillez cliquer sur le lien suivant :</p>
+        <a href="{{ url }}" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #4299e1; color: #ffffff; border-radius: 4px; text-decoration: none;">Réinitialisation de votre mot de passe</a>
+        <p style="color: #333333; font-size: 16px; margin-top: 20px;">Merci</p>
+    </div>
+</body>
+</html>
