--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,40 +3,66 @@
 {% block title %}Inscription{% endblock %}
 
 {% block page_content %}
-<div class="container mx-auto p-4">
-    <div class="max-w-md mx-auto bg-white rounded-lg overflow-hidden md:max-w-lg">
+<div class="container mx-auto px-4 py-8">
+    <div class="max-w-xl mx-auto bg-white rounded-lg overflow-hidden md:max-w-2xl shadow-md">
         <div class="md:flex">
-            <div class="w-full p-3">
-                <h1 class="text-2xl font-semibold text-center text-gray-700 dark:text-white">Inscription</h1>
-                {{ form_start(registrationForm, {'attr': {'class': 'space-y-6'}}) }}
+            <div class="w-full p-6">
+                <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">Inscription</h1>
+                {{ form_start(registrationForm, {'attr': {'class': 'space-y-4'}}) }}
 
-                <fieldset class="p-3">
-                    <legend class="text-lg font-semibold">Informations personnelles</legend>
-                    {{ form_row(registrationForm.email) }}
-                    {{ form_row(registrationForm.firstname) }}
-                    {{ form_row(registrationForm.lastname) }}
-                    {{ form_row(registrationForm.plainPassword.first) }}
-                    {{ form_row(registrationForm.plainPassword.second) }}
+                <fieldset class="space-y-4">
+                    <legend class="text-xl font-semibold text-gray-700">Informations personnelles</legend>
+                    {{ form_row(registrationForm.email, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.email.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.email) }}</div>
+                    {% endif %}
+                    {{ form_row(registrationForm.firstname, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.firstname.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.firstname) }}</div>
+                    {% endif %}
+                    {{ form_row(registrationForm.lastname, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.lastname.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.lastname) }}</div>
+                    {% endif %}
+                    {{ form_row(registrationForm.plainPassword.first, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.plainPassword.first.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.plainPassword.first) }}</div>
+                    {% endif %}
+                    {{ form_row(registrationForm.plainPassword.second, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.plainPassword.second.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.plainPassword.second) }}</div>
+                    {% endif %}
                 </fieldset>
 
-                <fieldset class="p-3">
-                    <legend class="text-lg font-semibold">Informations de la compagnie</legend>
-                    {{ form_row(registrationForm.companyName) }}
-                    {{ form_row(registrationForm.siren) }}
-                    {{ form_row(registrationForm.vatNumber) }}
-                    {{ form_row(registrationForm.zipCode) }}
-                    {{ form_row(registrationForm.street) }}
-                    {{ form_row(registrationForm.city) }}
-                    {{ form_row(registrationForm.country) }}
-                    {{ form_row(registrationForm.shareCapital) }}
-                    {{ form_row(registrationForm.bankInformationStatement) }}
+                <fieldset class="space-y-4 mt-6">
+                    <legend class="text-xl font-semibold text-gray-700">Informations de la compagnie</legend>
+                    {{ form_row(registrationForm.companyName, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.companyName.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.companyName) }}</div>
+                    {% endif %}
+                    {{ form_row(registrationForm.siren, {'attr': {'class': 'input'}}) }}
+                    {% if registrationForm.siren.vars.errors %}
+                        <div class="text-red-500">{{ form_errors(registrationForm.siren) }}</div>
+                    {% endif %}
+                    {{ form_row(registrationForm.vatNumber, {'attr': {'class': 'input'}}) }}
+                    {{ form_row(registrationForm.zipCode, {'attr': {'class': 'input'}}) }}
+                    {{ form_row(registrationForm.street, {'attr': {'class': 'input'}}) }}
+                    {{ form_row(registrationForm.city, {'attr': {'class': 'input'}}) }}
+                    {{ form_row(registrationForm.country, {'attr': {'class': 'input'}}) }}
+                    {{ form_row(registrationForm.shareCapital, {'attr': {'class': 'input'}}) }}
+                    {{ form_row(registrationForm.bankInformationStatement, {'attr': {'class': 'input'}}) }}
                 </fieldset>
 
-                {{ form_row(registrationForm.RGPDConsent) }}
+                {{ form_row(registrationForm.RGPDConsent, {'attr': {'class': 'mt-4'}}) }}
+                {% if registrationForm.RGPDConsent.vars.errors %}
+                    <div class="text-red-500">{{ form_errors(registrationForm.RGPDConsent) }}</div>
+                {% endif %}
 
-                <button type="submit" class="px-4 py-2 tracking-wide  transition-colors duration-200 transform bg-blue-600 rounded-md hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
-                    S'inscrire
-                </button>
+                <div class="flex justify-center mt-6">
+                    <button type="submit" class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 transition ease-in-out duration-150">
+                        S'inscrire
+                    </button>
+                </div>
                 
                 {{ form_end(registrationForm) }}
             </div>
